--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /.idea/vcs.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/modules.xml
+/.idea/misc.xml
